--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <htm<title>Page Title</title>l>
 <head>
 </head>
+<title>Page Title</title>
 <body file>
 </body another file>
-</html>
+<!DOCTYPE html>
+<html>
